@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2024  Hybird
+#    Copyright (C) 2015-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -153,12 +153,11 @@ class ReportsConfig(CremeAppConfig):
     def register_reports_charts(self):
         from . import report_chart_registry as charts
 
-        # TODO: register several at once
         charts.report_chart_registry.register(
-            charts.ReportBarChart('barchart',  _('Histogram')),
-            charts.ReportPieChart('piechart',  _('Pie')),
-            charts.ReportLineChart('linechart',  _('Curve')),
-            charts.ReportTubeChart('tubechart', _('Tube')),
+            charts.ReportBarChart(name='barchart', label=_('Histogram')),
+            charts.ReportPieChart(name='piechart', label=_('Pie')),
+            charts.ReportLineChart(name='linechart', label=_('Curve')),
+            charts.ReportTubeChart(name='tubechart', label=_('Tube')),
         )
 
     def register_reports_graph_fetchers(self):
