@@ -7,7 +7,7 @@ DATETIME_FILTER_FORMAT = '%d|%m|%Y|%H|%M|%S'
 
 EF_REPORTS = 'reports-report'
 
-# ReportField types
+# models.report.Field.type values
 RFT_FIELD      = 1
 RFT_RELATION   = 2
 RFT_FUNCTION   = 3
